// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t0] objects absent then: get.all returns empty 1`] = `[]`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t0] objects absent then: get.one returns null 1`] = `null`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t1] first object created then: get.all returns one object 1`] = `
[
  {
    "content": "content-a",
    "key": "journey/f70bba5c-b434-4f1d-9b76-a54e050989b5/a.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t1] first object created then: get.one returns content 1`] = `"content-a"`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t2] second object created then: get.all returns both objects 1`] = `
[
  {
    "content": "content-a",
    "key": "journey/f70bba5c-b434-4f1d-9b76-a54e050989b5/a.txt",
  },
  {
    "content": "content-b",
    "key": "journey/f70bba5c-b434-4f1d-9b76-a54e050989b5/b.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t3] object updated then: get.one returns updated content 1`] = `"content-a-updated"`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t4] object deleted then: get.all returns other object 1`] = `
[
  {
    "content": "content-b",
    "key": "journey/f70bba5c-b434-4f1d-9b76-a54e050989b5/b.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t4] object deleted then: get.one returns null 1`] = `null`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t0] objects absent then: get.all returns empty 1`] = `[]`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t0] objects absent then: get.one returns null 1`] = `null`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t1] objects created via uri then: get.all returns both 1`] = `
[
  {
    "content": "content-c",
    "key": "journey/2d05d735-7b2d-48e0-a2ad-505c3d92487e/c.txt",
  },
  {
    "content": "content-d",
    "key": "journey/2d05d735-7b2d-48e0-a2ad-505c3d92487e/d.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t1] objects created via uri then: get.one returns content 1`] = `"content-c"`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t2] object deleted via uri then: get.one returns null 1`] = `null`;
